--- a/GearDecayModifier.csproj
+++ b/GearDecayModifier.csproj
@@ -30,11 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony">
+      <HintPath>E:\SteamLibrary\steamapps\common\TheLongDark\tld_data\Managed\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>E:\SteamLibrary\steamapps\common\TheLongDark\tld_data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Harmony">
-      <HintPath>E:\SteamLibrary\steamapps\common\TheLongDark\tld_data\Managed\Harmony.dll</HintPath>
     </Reference>
     <Reference Include="ModSettings">
       <HintPath>E:\SteamLibrary\steamapps\common\TheLongDark\mods\ModSettings.dll</HintPath>
@@ -53,6 +53,9 @@
     <Compile Include="src\GearDecayModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Patches.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
