--- a/GearDecayModifier.csproj
+++ b/GearDecayModifier.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GearDecayModifier</RootNamespace>
     <AssemblyName>GearDecayModifier</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,6 +53,7 @@
   <ItemGroup>
     <Compile Include="src\GearDecayModifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\GearDecaySettings.cs" />
     <Compile Include="src\Patches.cs" />
   </ItemGroup>
   <ItemGroup>
